--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.20.2",
+    "antd": "^4.20.5",
     "axios": "^0.27.2",
     "moment": "^2.29.3",
-    "node-sass": "^7.0.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-highlight-words": "^0.18.0",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "react": "^18.1.0"
+    "react": "^18.1.0",
+    "sass": "^1.52.1"
   }
 }
