--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "moment": "^2.29.3",
+    "react-chartjs-2": "^4.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-highlight-words": "^0.18.0",
