--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "antd": "^4.20.5",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "firebase": "^9.17.1",
     "moment": "^2.29.3",
     "react-chartjs-2": "^4.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
+    "react-google-button": "^0.7.2",
     "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
